agregue texto h1 y h2.DMV

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Rick And Morty</title>
 </head>
 <body>
-  <h1></h1>
+  <h1>Ejemplo de despliegue</h1>
+  <h2>hasta aqui la explicacion</h2>
 </body>
 </html>
