Esquema completado del html, trabajando en el css.DMV

--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Rick And Morty</title>
 </head>
+
 <body>
-  <h1>Ejemplo de despliegue</h1>
-  <h2>hasta aqui la explicacion</h2>
+  <header></header>
+  <main>
+    <h1>Rick and morty</h1>
+    <hr>
+    <input id="txt-character" class="finder-character" type="text" placeholder="Type your character">
+    <div class="containerCards" id="containercards">
+      <div class="card-character">
+        <img src="img-card.webp" alt="img-card">
+        <div class="description-card">
+          <h2>Rick and morty</h2>
+          <p>Gender: Male</p>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+  </footer>
+  <script src=""></script>
 </body>
+
 </html>
