--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <input id="txt-character" class="finder-character" type="text" placeholder="Type your character">
     <div class="containerCards" id="containercards">
       <div class="card-character">
-        <img src="img-card.webp" alt="img-card">
+        <img src="img-card.webp.jpg" alt="img-card">
         <div class="description-card">
           <h2>Rick and morty</h2>
           <p>Gender: Male</p>
