Trabajando en el css y correccion de html .DMV

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Rick and morty</h1>
     <hr>
     <input id="txt-character" class="finder-character" type="text" placeholder="Type your character">
-    <div class="containerCards" id="containercards">
+    <div class="containerCards" id="container-cards">
       <div class="card-character">
         <img src="img-card.webp.jpg" alt="img-card">
         <div class="description-card">
