--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
   </main>
   <footer>
+    <a href="https://www.youtube.com/@edwindev">@edwindev</a>
   </footer>
   <script src="app.js"></script>
 </body>
