--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +12,7 @@
 <body>
   <header></header>
   <main>
-    <h1>Rick and morty</h1>
+    <h1>Rick and Morty</h1>
     <hr>
     <input id="txt-character" class="finder-character" type="text" placeholder="Type your character">
     <div id="containerCards" class="container-cards">
