--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <hr>
     <input id="txt-character" class="finder-character" type="text" placeholder="Type your character">
     <div id="containerCards" class="container-cards">
+      <div class="card-character">
+        <img src="" alt="">
+         <p></p>
+      </div>
     </div>
   </main>
   <footer>
