Finalizado proyecto.DMV

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <input id="txt-character" class="finder-character" type="text" placeholder="Type your character">
     <div id="containerCards" class="container-cards">
       <div class="card-character">
-        <img src="" alt="">
-         <p></p>
+        <div class="description-card">
+          <img src="" alt="">
+          <p></p>
+        </div>
       </div>
     </div>
   </main>
